--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/loder.png" alt="">
+                    <h1>Loding....</h1>
                 </div>
             </div>
         </div>
@@ -154,7 +154,8 @@
                             <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
                                 <div class="hero__caption">
                                     <h1 data-animation="fadeInLeft" data-delay="0.2s">Market leading
-                                        <span>Manufacturer</span></h1>
+                                        <span>Manufacturer</span>
+                                    </h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s">The right candidate may exist, but
                                         talented people</p>
                                     <a href="#" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Learn
@@ -200,12 +201,12 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/gallery/about1.png" alt="">
+                                <img src="assets/img/trinity/Pic4.png" alt="">
                             </div>
-                            <div class="img-cap">
+                            <!--  <div class="img-cap">
                                 <span>20</span>
                                 <p>Years of experience</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -214,7 +215,7 @@
                         <div class="about-caption mb-50">
                             <!-- Section Tittle -->
                             <div class="section-tittle mb-35">
-                                
+
                                 <h2>Get The Best Consultation, Services & Training For Government e-Marketplace In All
                                     Over India.Get The Best Consultation, Services & Training For Government
                                     e-Marketplace In All Over India.</h2>
@@ -240,17 +241,77 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/gallery/about1.png" alt="">
+                                <img src="assets/img/trinity/Pic5.png" alt="">
                             </div>
-                            <div class="img-cap">
+                            <!-- <div class="img-cap">
                                 <span>20</span>
                                 <p>Years of experience</p>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+
+        <section
+            class="elementor-section elementor-top-section elementor-element elementor-element-c25d2ce elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default"
+            data-id="c25d2ce" data-element_type="section">
+            <div class="elementor-background-overlay"></div>
+            <div class="elementor-container elementor-column-gap-default">
+                <div class="elementor-row">
+                    <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-3feb6573"
+                        data-id="3feb6573" data-element_type="column">
+                        <div class="elementor-column-wrap elementor-element-populated">
+                            <div class="elementor-widget-wrap">
+                                <section
+                                    class="elementor-section elementor-inner-section elementor-element elementor-element-64cdce32 elementor-section-boxed elementor-section-height-default elementor-section-height-default"
+                                    data-id="64cdce32" data-element_type="section">
+                                    <div class="elementor-container elementor-column-gap-default">
+                                        <div class="elementor-row">
+                                            <div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-75546eb4"
+                                                data-id="75546eb4" data-element_type="column">
+                                                <div class="elementor-column-wrap elementor-element-populated">
+                                                    <div class="elementor-widget-wrap">
+                                                        <div class="elementor-element elementor-element-1055e05f elementor-widget elementor-widget-heading"
+                                                            data-id="1055e05f" data-element_type="widget"
+                                                            data-widget_type="heading.default">
+                                                            <div class="elementor-widget-container">
+                                                                <h5
+                                                                    class="elementor-heading-title elementor-size-default">
+                                                                    Government e Marketplace (GeM)</h5>
+                                                            </div>
+                                                        </div>
+                                                        <div class="elementor-element elementor-element-6e9ee86c elementor-widget elementor-widget-heading"
+                                                            data-id="6e9ee86c" data-element_type="widget"
+                                                            data-widget_type="heading.default">
+                                                            <div class="elementor-widget-container">
+                                                                <h2
+                                                                    class="elementor-heading-title elementor-size-default">
+                                                                    Why GeM Seller Registration?</h2>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </section>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
+
+
+
+
         <!-- About  End-->
         <!--? Gallery Area Start -->
         <div class="gallery-area">
@@ -877,7 +938,8 @@
                                             draggable="false"
                                             style="position: absolute; left: 0px; top: 0px; width: 66px; height: 26px; user-select: none; border: 0px; padding: 0px; margin: 0px;">
                                     </div>
-                                </a></div>
+                                </a>
+                            </div>
                             <div
                                 style="background-color: white; padding: 15px 21px; border: 1px solid rgb(171, 171, 171); font-family: Roboto, Arial, sans-serif; color: rgb(34, 34, 34); box-sizing: border-box; box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 16px; z-index: 10000002; display: none; width: 300px; height: 180px; position: absolute; left: 315px; top: 150px;">
                                 <div style="padding: 0px 0px 10px; font-size: 16px; box-sizing: border-box;">Map Data
@@ -901,7 +963,8 @@
                                     <div
                                         style="position: relative; padding-right: 6px; padding-left: 6px; box-sizing: border-box; font-family: Roboto, Arial, sans-serif; font-size: 10px; color: rgb(68, 68, 68); white-space: nowrap; direction: ltr; text-align: right; vertical-align: middle; display: inline-block;">
                                         <a style="text-decoration: none; cursor: pointer; display: none;">Map
-                                            Data</a><span>Map data ©2019 Google</span></div>
+                                            Data</a><span>Map data ©2019 Google</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="gmnoscreen" style="position: absolute; right: 0px; bottom: 0px;">
@@ -922,7 +985,8 @@
                                     <a href="https://www.google.com/intl/en-US_US/help/terms_maps.html" target="_blank"
                                         rel="noopener"
                                         style="text-decoration: none; cursor: pointer; color: rgb(68, 68, 68);">Terms of
-                                        Use</a></div>
+                                        Use</a>
+                                </div>
                             </div><button draggable="false" title="Toggle fullscreen view"
                                 aria-label="Toggle fullscreen view" type="button"
                                 class="gm-control-active gm-fullscreen-control"
@@ -947,7 +1011,8 @@
                                         title="Report errors in the road map or imagery to Google"
                                         href="https://www.google.com/maps/@-31.197,150.744,9z/data=!10m1!1e1!12b1?source=apiv3&amp;rapsrc=apiv3"
                                         style="font-family: Roboto, Arial, sans-serif; font-size: 10px; color: rgb(68, 68, 68); text-decoration: none; position: relative;">Report
-                                        a map error</a></div>
+                                        a map error</a>
+                                </div>
                             </div>
                             <div class="gmnoprint gm-bundled-control gm-bundled-control-on-bottom" draggable="false"
                                 controlwidth="40" controlheight="81"
