add icons to Registration, Brand approvals etc

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 </head>
 
 <body>
@@ -34,7 +36,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <h1>Loding....</h1>
+                    <h1>Loading....</h1>
                 </div>
             </div>
         </div>
@@ -226,26 +228,26 @@
                                 days for vendor assessment but we can get it done just in few days only. Truest us
                                 because we can get it all done for you.
                             <ul>
-                                <li>Registration</li>
-                                <li>Brand Approval</li>
-                                <li>Profile Completion</li>
-                                <li>Products Upload</li>
-                                <li>Services Upload</li>
-                                <li>Bidding On Tenders</li>
+                                <li><i class="fas fa-check">  Registration</i></li>
+                                <li><i class="fas fa-check">  Brand Approval</i></li>
+                                <li><i class="fas fa-check">  Profile Completion</i></li>
+                                <li><i class="fas fa-check">  Products Upload</i></li>
+                                <li><i class="fas fa-check">  Services Upload</i></li>
+                                <li><i class="fas fa-check">  Bidding On Tenders</i></li>
                             </ul>
 
                             </p>
                         </div>
 
-                    </div>
-                    <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
-                        <div class="about-right-cap">
-                            <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic5.png" alt="">
-                            </div>
-                            <!-- <div class="img-cap">
-                                <span>20</span>
-                                <p>Years of experience</p>
+                        </div>
+                        <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
+                            <div class="about-right-cap">
+                                <div class="about-right-img">
+                                    <img src="assets/img/trinity/Pic5.png" alt="">
+                                </div>
+                                <!-- <div class="img-cap">c
+                                    <span>20</span>
+                                    <p>Years of experience</p>
                             </div> -->
                         </div>
                     </div>
@@ -254,7 +256,29 @@
         </section>
 
 
-
+        <section class="elementor-section elementor-top-section elementor-element elementor-element-75a63f48 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="75a63f48" data-element_type="section">
+            <div class="elementor-container elementor-column-gap-no">
+                <div class="elementor-row">
+        <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-4ba2d75a" data-id="4ba2d75a" data-element_type="column">
+<div class="elementor-column-wrap elementor-element-populated">
+                <div class="elementor-widget-wrap">
+            <div class="elementor-element elementor-element-6172139 elementor-widget elementor-widget-heading" data-id="6172139" data-element_type="widget" data-widget_type="heading.default">
+    <div class="elementor-widget-container">
+        
+<h4 class="elementor-heading-title elementor-size-default text-center">Start Your Future With Government e Marketplace</h4>		</div>
+    </div>
+    <div class="elementor-element elementor-element-2f9e223 elementor-widget elementor-widget-text-editor" data-id="2f9e223" data-element_type="widget" data-widget_type="text-editor.default">
+    <div class="elementor-widget-container">
+                    <div class="elementor-text-editor elementor-clearfix">
+    <p><span style="color: #000000;"><a style="color: #000000;" href="https://hi.wikipedia.org/wiki/%E0%A4%B8%E0%A4%B0%E0%A4%95%E0%A4%BE%E0%A4%B0%E0%A5%80_%E0%A4%88-%E0%A4%AC%E0%A4%BE%E0%A4%9C%E0%A4%BC%E0%A4%BE%E0%A4%B0_(GeM)">Government E- Marketplace</a>&nbsp;is a platform to facilitate and enable easy online procurement of goods and services required by several government departments, associations, and public sector undertaking in India. The sole purpose of this portal to enhance transparency, efficiency, and speed in public procurement. It offers tools of reverse e-auction, e-bidding, and demand aggregation to facilitate the government users to receive the best value or their money.gem registration, gem portal consultancy, gem seller registration, register on gem, register on government e market portal.&nbsp;</span></p>					</div>
+            </div>
+    </div>
+            </div>
+        </div>
+</div>
+                    </div>
+        </div>
+</section>
 
 
 
@@ -1318,6 +1342,7 @@
     <!-- Jquery Plugins, main Jquery -->
     <script src="./assets/js/plugins.js"></script>
     <script src="./assets/js/main.js"></script>
+    <script src="assets/css/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
 
 
 </body>
