--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
         <section>
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row">
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
@@ -185,12 +185,11 @@
                         <div class="slider-area position-relative">
                             <div class="slider-active">
                                 <!-- Single Slider -->
-                                <div class="single-slider slider-height d-flex align-items-center">
+                                <div class="single-slider slider-height d-flex">
                                     <div class="container">
 
                                         <div class="hero__caption">
-                                            <h2 data-animation="fadeInUp" data-delay="2s" class="title_name">Gem Portal
-                                                Consultant</h2>
+                                            <h2 data-animation="fadeInUp" data-delay="2s" class="title_name">Trinity balaji</h2>
 
                                             <h1 data-animation="fadeInLeft" data-delay="3s">Become A <span>Registered
                                                     Seller</span></h1>
@@ -220,7 +219,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic4.png" alt="">
+                                <img src="assets/img/trinity/Pic2.png" alt="">
                             </div>
                             <!--  <div class="img-cap">
                                 <span>20</span>
@@ -233,7 +232,7 @@
                             <!-- Section Tittle -->
                             <div class="section-tittle mb-35">
                                 <span class="element">About Us</span>
-                                <h2>Why Choose Us As Your GeM Portal Consultant Not Others?</h2>
+                                <h2>Why Choose Us As Your Trinity Balaji, Not Others?</h2>
                             </div>
                             <p>
                                 You may contact us to get your Gem Registration Consultants in Delhi, Meerut, Varanasi,
@@ -311,7 +310,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
                         <div class="section-title mb-35">
-                            <h1 class="text-center">Why GeM Seller Registration?
+                            <h1 class="text-center">Why Trinity Registration?
                             </h1>
                         </div>
                     </div>
@@ -335,7 +334,7 @@
                                 offered by government such as- It offers up to date user-friendly dashboard for buying,
                                 monitoring supplies and payment.
                                 <br />
-                                <b> Who can buy/purchase through GeM?</b>
+                                <b> Who can buy/purchase through Trinity?</b>
                                 <br>
                                 All Central government and State Government Ministries/Departments including its
                                 attached/subordinate offices, Central and State autonomous bodies, Central and State
@@ -592,14 +591,19 @@
                             <div class="row justify-content-center">
                                 <div class="col-xs-12 col-lg-12 col-md-10">
                                     <div class="section-title mb-35">
-                                        <h1 class="text-center">GeM Registration Consultancy
+                                        <h1 class="text-center">Trinity Balaji
                                         </h1>
                                     </div>
                                 </div>
                             </div>
                             <p>
                                 Our team will complete your gem profile within 24 Hours if all documents are provided.
-                                Experts will guide you further on how to get started on the gem portal.</p>
+                                Experts will guide you further on how to get started on the gem portal.
+                            </p>
+                            <div class="rowr"><div class="col text-center">
+                            <button type="button" class=" btn-success-custom">Call Us Now</button></div>
+                        </div>
+
                         </div>
 
                     </div>
