pic one changed

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic1.png" alt="">
+                                <img src="assets/img/trinity/Pic1new.png" alt="">
                             </div>
 
                         </div>
@@ -705,6 +705,73 @@
                 </div>
             </div>
         </section>
+
+
+        <section class="about-low-area section-padding40">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h2 class="text-center" data-animation="fadeInRight" data-delay="3s">Facing Issue With Tax Assessment On Trinity Balaji Registration?
+
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h2 class="text-center" data-animation="fadeInLeft" data-delay="3s">Get It Done From Trinity Experts In Just Few Minutes
+
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row align-items-center">
+                    <div class="col-xl-6 col-lg-6 col-md-10">
+                        <div class="about-caption mb-50">
+                            <!-- Section Tittle -->
+
+                            <p>
+                                Government E- Marketplace is a platform to facilitate and enable easy online procurement
+                                of goods and services required by several government departments, associations, and
+                                public sector undertaking in India. The sole purpose of this portal to enhance
+                                transparency, efficiency, and speed in public procurement. It offers tools of reverse
+                                e-auction, e-bidding, and demand aggregation to facilitate the government users to
+                                receive the best value or their money.gem registration, gem portal consultancy, gem
+                                seller registration, register on gem, register on government e market portal. The
+                                purchases through GeM by Government users have been authorised and made mandatory by
+                                Ministry of Finance by adding a new Rule No. 149 in the General Financial Rules, 2017.
+                                On availing a GEM registration, you can take the advantages of smart trade and commerce
+                                offered by government such as- It offers up to date user-friendly dashboard for buying,
+                                monitoring supplies and payment.
+                                <br />
+                                <b> Who can buy/purchase through Trinity?</b>
+                                <br>
+                                All Central government and State Government Ministries/Departments including its
+                                attached/subordinate offices, Central and State autonomous bodies, Central and State
+                                Public Sector Units and local bodies etc. are authorised to make procurement through GeM
+                                portal.
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
+                        <div class="about-right-cap">
+                            <div class="about-right-img">
+                                <img src="assets/img/trinity/Pic9.png" alt="">
+                            </div>
+                            <!--  <div class="img-cap">
+                            <span>20</span>
+                            <p>Years of experience</p>
+                        </div> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
         <!--? Gallery Area Start -->
