--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@
                                 days for vendor assessment but we can get it done just in few days only. Truest us
                                 because we can get it all done for you.
                             <ul class="custom-font">
-                                <li><i class="fas fa-check"> Registration</i></li>
-                                <li><i class="fas fa-check"> Brand Approval</i></li>
-                                <li><i class="fas fa-check"> Profile Completion</i></li>
-                                <li><i class="fas fa-check"> Products Upload</i></li>
-                                <li><i class="fas fa-check"> Services Upload</i></li>
-                                <li><i class="fas fa-check"> Bidding On Tenders</i></li>
+                                <li><i class="fas fa-check"></i> Registration</li>
+                                <li><i class="fas fa-check"></i> Brand Approval</li>
+                                <li><i class="fas fa-check"></i> Profile Completion</li>
+                                <li><i class="fas fa-check"></i> Products Upload</li>
+                                <li><i class="fas fa-check"></i> Services Upload</li>
+                                <li><i class="fas fa-check"></i> Bidding On Tenders</li>
                             </ul>
 
                             </p>
@@ -673,7 +673,7 @@
                                 helping buyers and sellers on the gem portal. As per google, we are listed on top due to
                                 our best service quality. Our team is always ready to provide you our gem consultancy
                                 services regarding sellers and buyers.
-                                <br/>
+                                <br />
 
                                 As we are helping sellers and buyers from 2016 for the gem portal as gem consultant.
                                 Everyone now knows about us as we are listed on top positions all over India, its all
@@ -681,7 +681,7 @@
                                 services to our clients without any exception. As of now, we have helped a lot of
                                 sellers and buyers from all over India. Our experts have experience for both buyers &
                                 sellers for the gem portal.
-                                <br/>
+                                <br />
 
                                 We are gem consultants, we provide services and as well as complete training for the gem
                                 portal. Our experts provide gem training for buyers and sellers. As we provide live and
@@ -712,7 +712,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
                         <div class="section-title mb-35">
-                            <h2 class="text-center" data-animation="fadeInRight" data-delay="3s">Facing Issue With Tax Assessment On Trinity Balaji Registration?
+                            <h2 class="text-center" data-animation="fadeInRight" data-delay="3s">Facing Issue With Tax
+                                Assessment On Trinity Balaji Registration?
 
                             </h2>
                         </div>
@@ -721,41 +722,51 @@
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
                         <div class="section-title mb-35">
-                            <h2 class="text-center" data-animation="fadeInLeft" data-delay="3s">Get It Done From Trinity Experts In Just Few Minutes
+                            <h2 class="text-center" data-animation="fadeInLeft" data-delay="3s">Get It Done From Trinity
+                                Experts In Just Few Minutes
 
                             </h2>
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-6 col-md-10">
-                        <div class="about-caption mb-50">
-                            <!-- Section Tittle -->
-
-                            <p>
-                                Government E- Marketplace is a platform to facilitate and enable easy online procurement
-                                of goods and services required by several government departments, associations, and
-                                public sector undertaking in India. The sole purpose of this portal to enhance
-                                transparency, efficiency, and speed in public procurement. It offers tools of reverse
-                                e-auction, e-bidding, and demand aggregation to facilitate the government users to
-                                receive the best value or their money.gem registration, gem portal consultancy, gem
-                                seller registration, register on gem, register on government e market portal. The
-                                purchases through GeM by Government users have been authorised and made mandatory by
-                                Ministry of Finance by adding a new Rule No. 149 in the General Financial Rules, 2017.
-                                On availing a GEM registration, you can take the advantages of smart trade and commerce
-                                offered by government such as- It offers up to date user-friendly dashboard for buying,
-                                monitoring supplies and payment.
-                                <br />
-                                <b> Who can buy/purchase through Trinity?</b>
-                                <br>
-                                All Central government and State Government Ministries/Departments including its
-                                attached/subordinate offices, Central and State autonomous bodies, Central and State
-                                Public Sector Units and local bodies etc. are authorised to make procurement through GeM
-                                portal.
-                            </p>
+                        <div class="card border-0">
+                            <div class="card-body">
+                                <h2 class="card-title"><i class="fas fa-star"></i>
+                                    TAX ASSESSMENT</h2>
+                                <p class="card-text text-rght">Facing issue with tax assessment verification on gem
+                                    portal. We will try do it for you just in few minutes.</p>
+                            </div>
                         </div>
-
+                        <div class="card border-0">
+                            <div class="card-body">
+                                <h2 class="card-title">
+                                    <i class="fas fa-star"></i>
+                                    KEY PERSON VALIDATION</h2>
+                                <p class="card-text">We will verify your key person validation, we will try, but we can
+                                    verify it if we have created your gem portal account.</p>
+                            </div>
+                        </div>
+                        <div class="card border-0">
+                            <div class="card-body">
+                                <h2 class="card-title">
+                                    <i class="fas fa-star"></i>
+                                    PFMS VERIFICATION</h2>
+                                <p class="card-text">Facing issue with bank account verification on gem portal. Let us
+                                    know we will do it for you.</p>
+                            </div>
+                        </div>
+                        <div class="card border-0">
+                            <div class="card-body">
+                                <h2 class="card-title">
+                                    <i class="fas fa-star"></i>
+                                    OFFICE LOCATION VERIFICATION</h2>
+                                <p class="card-text">Facing issue with office location verification on gem portal. Let
+                                    us help you in this step. We can do it for you.</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
