task 9 and 10 completed

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
                                         <div class="hero__caption">
                                             <h2 data-animation="fadeInUp" data-delay="2s" class="title_name">Trinity
-                                                balaji</h2>
+                                                Balaji</h2>
 
                                             <h1 data-animation="fadeInLeft" data-delay="3s">Become A <span>Registered
                                                     Seller</span></h1>
@@ -744,7 +744,8 @@
                             <div class="card-body">
                                 <h2 class="card-title">
                                     <i class="fas fa-star"></i>
-                                    KEY PERSON VALIDATION</h2>
+                                    KEY PERSON VALIDATION
+                                </h2>
                                 <p class="card-text">We will verify your key person validation, we will try, but we can
                                     verify it if we have created your gem portal account.</p>
                             </div>
@@ -753,7 +754,8 @@
                             <div class="card-body">
                                 <h2 class="card-title">
                                     <i class="fas fa-star"></i>
-                                    PFMS VERIFICATION</h2>
+                                    PFMS VERIFICATION
+                                </h2>
                                 <p class="card-text">Facing issue with bank account verification on gem portal. Let us
                                     know we will do it for you.</p>
                             </div>
@@ -762,7 +764,8 @@
                             <div class="card-body">
                                 <h2 class="card-title">
                                     <i class="fas fa-star"></i>
-                                    OFFICE LOCATION VERIFICATION</h2>
+                                    OFFICE LOCATION VERIFICATION
+                                </h2>
                                 <p class="card-text">Facing issue with office location verification on gem portal. Let
                                     us help you in this step. We can do it for you.</p>
                             </div>
@@ -782,6 +785,60 @@
                 </div>
             </div>
         </section>
+
+        <section class="about-low-area section-padding40">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h2 class="text-center">OEM PANEL ACTIVATION
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h1 class="text-center">Are You Stuck With Vendor Assessment?
+
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h2 class="text-center">Are you stuck with your vendor assessment? Do you want to become an
+                                OEM on trinity balaji?
+
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-xl-12 col-lg-12 col-md-10">
+                        <div class="about-caption mb-50">
+                            <!-- Section Tittle -->
+
+                            <p>
+                                We can provide you complete training and support for the gem portal. Our team of experts
+                                can guide you with all the solutions for the gem portal. With the completion of vendor
+                                assessment, we will active your OEM Panel. We are GeM Portal Experts With 4+ Years Of
+                                Experience With GeM Portal
+                            </p>
+                            <div class="row">
+                                <div class="col text-center">
+                                    <button type="button" class=" btn-success-custom">Activate My OEM Panel</button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
 
 
 
