--- a/index.html
+++ b/index.html
@@ -840,6 +840,94 @@
         </section>
 
 
+        <section class="about-low-area section-padding40">
+            <div class="container">
+
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h1 class="text-center">Benefits of Trinity Balaji Registration
+
+
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title mb-35">
+                            <h2 class="text-center">SELL DIRECTLY TO GOVERNMENT
+
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-xl-12 col-lg-12 col-md-10">
+                        <div class="about-caption mb-50">
+                            <!-- Section Tittle -->
+
+                            <p>
+                                Dealers can offer their products and services at reasonable cost legitimately to
+                                government buyers with their prices. As for few products only the OEM and their
+                                authorised dealers can sell products to government only. While others may offer any
+                                product. portal seller consultants
+                            </p>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="card border-0 text-center">
+                                        <div class="card-body">
+                                            <i class="fa fa-link fa-5x" aria-hidden="true"></i>
+
+                                            <h2 class="card-title">
+                                                Trade Assistance</h2>
+                                            <p class="card-text text-rght">All government office like Central, State and
+                                                PSU needs to satisfy their buy prerequisites only through the sellers
+                                                registered on the GeM portal. If future each and every government office
+                                                will purchase will be made on GeM Portal.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card border-0 text-center">
+                                        <div class="card-body">
+                                            <i class="fa fa-rocket fa-5x" aria-hidden="true"></i>
+
+                                            <h2 class="card-title">
+                                                Less Administrative Work</h2>
+                                            <p class="card-text text-rght">There is a less administrative work required
+                                                to acquire GeM registration. In addition there is a-simple and flexible
+                                                procedure for delicate allotment under the GeM portal. Everything is
+                                                just few clicks away in future.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card border-0 text-center">
+                                        <div class="card-body">
+                                            <i class="fa fa-music fa-5x" aria-hidden="true"></i>
+
+                                            <h2 class="card-title">
+                                                Unique Benefits</h2>
+                                            <p class="card-text text-rght">There is a possibility for GeM registration
+                                                as a startup on GeM portal having an exceptional and innovative
+                                                products. The government has loosened up standards to procure-goods from
+                                                new startup entrants.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
+
+
 
 
         <!--? Gallery Area Start -->
