--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@
                                 days for vendor assessment but we can get it done just in few days only. Truest us
                                 because we can get it all done for you.
                             <ul class="custom-font">
-                                <li><i class="fas fa-check"></i> Registration</li>
-                                <li><i class="fas fa-check"></i> Brand Approval</li>
-                                <li><i class="fas fa-check"></i> Profile Completion</li>
-                                <li><i class="fas fa-check"></i> Products Upload</li>
-                                <li><i class="fas fa-check"></i> Services Upload</li>
-                                <li><i class="fas fa-check"></i> Bidding On Tenders</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Registration</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Brand Approval</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Profile Completion</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Products Upload</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Services Upload</li>
+                                <li><i class="fas fa-check orangeiconcolor"></i> Bidding On Tenders</li>
                             </ul>
 
                             </p>
@@ -924,6 +924,48 @@
                 </div>
             </div>
         </section>
+
+
+
+        <section class="about-low-area section-padding40">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
+                        <div class="about-right-cap">
+                            <div class="about-right-img">
+                                <img src="assets/img/trinity/Pic10.png" alt="">
+                            </div>
+                            <!--  <div class="img-cap">
+                            <span>20</span>
+                            <p>Years of experience</p>
+                        </div> -->
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-10">
+                        <div class="about-caption mb-50">
+                            <!-- Section Tittle -->
+                            <div class="row justify-content-center">
+                                <div class="col-xs-12 col-lg-12 col-md-10">
+                                    <div class="section-title mb-35">
+                                        <h1 class="text-center">How We Provide Services As Trinity Balaji
+                                        </h1>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>
+                                The simplest and best way to provide you the best consultancy for gem portal.
+                                <ul class="custom-font">
+                                    <li><i class="fas fa-check orangeiconcolor"></i> Choose & Buy Your Package</li>
+                                    <li><i class="fas fa-check orangeiconcolor"></i> Make Payment & Fill Required Details</li>
+                                    <li><i class="fas fa-check orangeiconcolor"></i> Wait For Confirmation & All done !</li>
+                                </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
 
